--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,5 @@
 <string name="app_name">Wi-Fi Lock</string>
 <string name="app_description">Keep Wi-Fi radio awake when Phone goes to sleep.</string>
 <string name="service_enabled">Wi-Fi Lock is now ENABLED, and your Wi-Fi radio will remain awake at all times (unless explicitly switched off).</string>
-<string name="service_disabled">Wi-Fi Lock is now DISABLED, and the Phone may shut of your Wi-Fi radio when it is idle.</string>
+<string name="service_disabled">Wi-Fi Lock is now DISABLED, and the Phone may shut off your Wi-Fi radio when it is idle.</string>
 </resources>
