--- a/TODO
+++ b/TODO
@@ -37,3 +37,8 @@
   could be provided that disables the activity (via
   setComponentEnabledSetting), which *should* allow us to
   make the icon disappear. 
+  
+- It feels like the time it takes to show the toast 
+  increased in 1.1.0 - measure if the setComponentEnabledSetting
+  call indeed is responsible for this, and if so, show the 
+  toast first, then do the call.  
