--- a/CHANGES
+++ b/CHANGES
@@ -1,13 +1,16 @@
 1.1.1 (X)
-    CHANGE: Exclude ourselves from recent activities list (suggested by Mariano Kamp).
-    CHANGE: Better handle quick toggling, by reusing an existing toast rather than queuing them.
+    * Exclude ourselves from recent activities list (suggested by Mariano
+      Kamp).
+    * Better handle quick toggling, by reusing an existing toast rather
+      than queuing them.
+
 
 1.1.0 (2009-03-12)
-    ADD: Boot persistence.
-    FIX: Typo in toast message.
+    * Added boot persistence.
+    * Fixed Typo in toast message.
 
 1.0.1 (2009-02-25)
-    FIX: No longer show notifications when service is auto-restarted by Android.
+    * No longer show notifications when service is auto-restarted by Android.
 
 1.0.0 (2009-02-24)
     Initial release.
