Obsoleted some TODOs, now with Cupcake and all.

--- a/TODO
+++ b/TODO
@@ -1,33 +1,5 @@
-- Investigate if running the service in a separate process
-  will improve memory conditions, since now the Activity
-  process can be killed off immediately. Right now, the
-  Activity memory is probably only freed once the service
-  restarts for the first time.
-
 - (optional) Notification Icon indicating whether we are
   on or off (suggested via Market comments).
-
-- Option to combine with Wifi toggle feature, switching
-  on Wifi *and*  enabling the lock in one click. Although
-  this might really be unnecessary once boot persistence
-  is implemented since you basically can just leave it
-  always on. Let's see about this ((suggested via Market
-  comments).
-
-- Is it wise to refresh the WifiLock once in a time to be
-  on the safe side? There are also issues like:
-  http://code.google.com/p/android/issues/detail?id=2059
-  
-- Possible a related issue, it appears that if a wifi lock
-  is active, then automatic wifi reconnecting seems to be
-  broken im some cases. Wifi sometimes doesn't seem to come
-  back automatically, even though a connection would be 
-  available, and so far this has only happend for me when a
-  wifi lock utility was activated. A possible solution would
-  be waiting for wifi state changes and release the lock 
-  when wifi comes down, and renable the lock once it is back.
-  This issue *might* be pre-cupecake only - needs 
-  investigatation.
 
 - Optionally force disable usage of a data plan in any
   case (suggested by Ayman El-Ghazali). If Android does not
@@ -54,3 +26,38 @@
   make the icon disappear.
 
 - Locale plugin.
+
+-------------------------------------------------------------------------
+
+Considering the part of the functionality that became obsolete with
+Cupcake, implementing the features below doesn't really make much sense
+anymore - while nominally good things, there's going to be just too
+few people running the old Version in the long run.
+
+- Investigate if running the service in a separate process
+  will improve memory conditions, since now the Activity
+  process can be killed off immediately. Right now, the
+  Activity memory is probably only freed once the service
+  restarts for the first time.
+
+- Possible a related issue, it appears that if a wifi lock
+  is active, then automatic wifi reconnecting seems to be
+  broken im some cases. Wifi sometimes doesn't seem to come
+  back automatically, even though a connection would be
+  available, and so far this has only happend for me when a
+  wifi lock utility was activated. A possible solution would
+  be waiting for wifi state changes and release the lock
+  when wifi comes down, and renable the lock once it is back.
+  This issue *might* be pre-cupecake only - needs
+  investigatation.
+
+- Option to combine with Wifi toggle feature: switching
+  on Wifi *and* enabling the lock in one click. Although
+  this might really be unnecessary once boot persistence
+  is implemented since you basically can just leave it
+  always on. Let's see about this (suggested via Market
+  comments).
+
+- Is it wise to refresh the WifiLock once in a time to be
+  on the safe side? There are also issues like:
+  http://code.google.com/p/android/issues/detail?id=2059
