--- a/TODO
+++ b/TODO
@@ -25,8 +25,6 @@
   setComponentEnabledSetting), which *should* allow us to
   make the icon disappear.
 
-- Locale plugin.
-
 -------------------------------------------------------------------------
 
 Considering the part of the functionality that became obsolete with
@@ -61,3 +59,7 @@ few people running the old Version in the long run.
 - Is it wise to refresh the WifiLock once in a time to be
   on the safe side? There are also issues like:
   http://code.google.com/p/android/issues/detail?id=2059
+
+- Locale plugin (usecase Nr. 1 for this would have been "when
+  plugged in", but there's a third Wi-Fi sleep policy option
+  in Cupcake that does exactly this.
