--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -4,4 +4,6 @@
 <string name="app_description">Verhindert das automatische Abschalten der WLAN Funktion während das Gerät nicht verwendet wird.</string>
 <string name="service_enabled">Die WLAN Sperre ist nun AKTIV, und die WLAN Funktion wird nicht mehr automatisch abgeschaltet.</string>
 <string name="service_disabled">Die WLAN Sperre is nun INAKTIV, und die WLAN Funktion kann abgeschaltet werden während das Gerät nicht verwendet wird.</string>
+<string name="setting_to_never">Die WLAN Standby-Richtlinie steht nun auf NIEMALS, und die WLAN Funktion wird nicht mehr automatisch abgeschaltet.</string>
+<string name="setting_to_default">Die WLAN Standby-Richtlinie steht nun auf STANDARD, und die WLAN Funktion kann abgeschaltet werden während das Gerät nicht verwendet wird.</string>
 </resources>
